@@ -3,4 +3,7 @@ package test.net.sourceforge.pmd.typeresolution.testdata;
 public class InnerClass {
 	public class TheInnerClass {
 	}
+
+	public void foo(TheInnerClass arg) {
+	}
 }
